--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,14 +1,6 @@
 .c {
   background-color: white;
-  height: 100vh;
   position: relative;
-}
-
-.c-bg {
-  width: 20px;
-  height: 100%;
-  background-color: #59b256;
-  position: absolute;
 }
 
 .c-wrapper {
@@ -28,12 +20,12 @@
   align-items: center;
   justify-content: center;
   margin-right: 10%;
-  margin-top: 2%;
-
+  margin-top: 9%;
 }
 
 .c-title {
-  font-size: 60px;
+  font-size: 50px;
+  color:rgba(56, 1, 1, 0.986);
 }
 
 .c-info-item {
@@ -45,8 +37,8 @@
 }
 
 .c-icon {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   margin-right: 20px;
 }
 
@@ -55,7 +47,7 @@
 }
 
 form {
-  margin-top: 20px;
+  margin-top: 1%;
 }
 
 input {
@@ -63,13 +55,13 @@ input {
   height: 50px;
   border: none;
   border-bottom: 1px solid black;
-  margin: 10px 0px;
+  margin: 10px 10px;
   font-size: 14px;
   padding-left: 10px;
 }
 
 textarea {
-  width: 100%;
+  width: 95%;
   margin: 10px 0px;
   font-size: 14px;
   padding-left: 10px;
@@ -78,8 +70,8 @@ textarea {
 button {
   border: none;
   padding: 15px;
-  background-color: #59b256;
-  color: white;
+  background-color: rgba(226, 173, 192, 0.685);
+  color: rgba(27, 0, 0, 0.986);
   font-weight: 500;
   cursor: pointer;
 }
