--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -4,60 +4,60 @@
   align-items: center;
   text-align: center;
 }
-.imgBackground {
+ .imgBackground {
   position: absolute;
   z-index: 1;
-  height: 500%;
-  width: 500%;
-}
+ height: 100%;
+ 
+} 
 .pl-texts {
   width: 65%;
   width: 215vh;
-  height: 50%;
-  color: white;
-  z-index: 2;
+  margin-top: 2%;
+  z-index: 2; 
 }
 .pl-title {
   font-size: 50px;
   font-weight: 600;
-  z-index: 2;
+  margin-top: 2%;
+  z-index: 2; 
   color: rgba(228, 212, 218, 0.966);
 }
 
 .pl-desc {
   font-size: 20px;
-  margin-top: 1%;
   color: rgba(226, 173, 192, 0.685);
-  z-index: 2;
+  z-index: 2; 
 }
 
-.myProjects {
+
+ .myProjects {
   width: 95%;
-  height: 200%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
-  margin-top: -10%;
-  z-index: 2;
-}
-
-.pl-list {
-  margin-bottom: -40%;
-  margin-top: -20%;
-  height: auto;
+   z-index: 2; 
+ }
+ 
+ .pl-list {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: space-between;
-  z-index: 2;
+   z-index: 2; 
+   margin-top: 3%;
+   height: 5%;
+  border: solid;
+  border-color: red;
+   
   //hide scrollbar
-  scrollbar-width: none;
+  //scrollbar-width: none;
   //hide scrollbar for other browsers
-  &::-webkit-scrollbar {
+/*   &::-webkit-scrollbar {
     display: none;
-  }
+  } */
 }
 .showmore {
   height: 20%;
@@ -70,12 +70,14 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  //hide scrollbar
+
+/*   //hide scrollbar
   scrollbar-width: none;
   //hide scrollbar for other browsers
-  &::-webkit-scrollbar {
-    display: none;
-  }
+   &::-webkit-scrollbar {
+    display:none;
+  }   */
+ /*  color: rgba(71, 2, 34, 0.774)  */
 }
 
 @media screen and (max-width: 480px) {
