--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -39,6 +39,7 @@
   align-content: center;
   justify-content: center;
    z-index: 2; 
+
  }
  
  .pl-list {
@@ -48,17 +49,30 @@
   justify-content: space-between;
    z-index: 2; 
    margin-top: 3%;
-   height: 5%;
-  border: solid;
-  border-color: red;
-   
+   overflow: none;
+  overflow-y: scroll;
+  scrollbar-width: 50%;
+  scrollbar-arrow-color: rgb(255, 193, 221);
+  ::-webkit-scrollbar{
+    width: 50%;
+  }
+  ::-webkit-scrollbar-track{
+    background-color: rgb(232, 232, 232);
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(rgb(125, 0, 0) , rgb(166, 50, 87));
+  }
+  }
+ 
+
   //hide scrollbar
   //scrollbar-width: none;
   //hide scrollbar for other browsers
 /*   &::-webkit-scrollbar {
     display: none;
   } */
-}
+
 .showmore {
   height: 20%;
   width: 225px;
