--- a/src/components/topBar/TopBar.scss
+++ b/src/components/topBar/TopBar.scss
@@ -41,14 +41,21 @@
           display: none;
         }
 
-        .icon {
-          font-size: 18px;
-          margin-right: 5px;
-        }
-
         span {
           font-size: 15px;
           font-weight: 500;
+
+          a {
+            font-size: inherit;
+            color: inherit;
+            text-decoration: none;
+            font-size: 25px;
+            font-weight: 200;
+            margin-left: 100px;
+            &:hover {
+              font-weight: 400;
+            }
+          }
         }
       }
     }
@@ -76,7 +83,7 @@
   }
 
   &.active {
-    background-color:  rgba(49, 0, 23, 0.986);
+    background-color: rgb(31, 4, 16);
     color: $mainColor;
 
     .hamburger {
